# sirchml-autoresearch

./: .gitignore  PLANNED_IMPROVEMENTS.MD  README.md  docker-compose.yml  prepare.py  program.md  pyproject.toml  session_manager.py  train.py
autoresirch/: program.md  train.py
autoresirch/prepare/: __init__.py  architecture_loading.py  cli.py  dataset_preparation.py  fold_preprocessor.py  orchestration.py  schemas.py  training_harness.py  utils.py
autoresirch/prepare/comparative/: __init__.py  dataset.py  metrics.py  training.py
autoresirch/prepare/data/: __init__.py  rnafm.py
autoresirch/prepare/shared/: __init__.py  orchestration.py  schemas.py  utils.py
autoresirch/prepare/standard/: __init__.py  dataset.py  preprocessing.py  training.py
autoresirch/session_manager/: __init__.py  analysis.py  cli.py  constants.py  orchestration.py  schemas.py  storage.py
autoresirch/session_manager/comparative/: __init__.py  metrics.py
autoresirch/session_manager/shared/: __init__.py  analysis.py  metrics.py  orchestration.py  storage.py
autoresirch/session_manager/standard/: __init__.py  metrics.py
data/: README.md
deprecated/: PLANNED_IMPROVEMENTS.md  basic_frontend_plan.md  cnn_plan.md  comparative_model_refactor_plan.md  prepare.py  session_manager.py  train.py
documentation/: cnn_plan.md  frontend_redesign.md  frontend_startup.md  openai_api_refactor_plan.md
frontend/api/: Dockerfile
frontend/api/app/: __init__.py  main.py  (+2 more)
frontend/web/: Dockerfile  index.html  package-lock.json  package.json
tests/: test_prepare.py  test_session_manager.py
(+6 files in other folders)
