[project]
name = "sirna-architecture-search"
version = "0.1.0"
description = "Constrained autonomous architecture search for siRNA regression"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
